Add model information to report provenance headers
- Include Analysis Model and Synthesis Model in experiment provenance header
- Update synthesis agent prompt template to display model information
- Pass analysis_model parameter to synthesis agent for provenance tracking
- Update UnifiedSynthesisAgent to properly handle model metadata
- Tested successfully with micro test experiment using Claude Sonnet 4
- Model information now appears in all final reports for reproducibility


Former-commit-id: 02ab3879d05c23603ebac77d4eae3740617f39ff

--- a/discernus/agents/unified_synthesis_agent/prompt.yaml
+++ b/discernus/agents/unified_synthesis_agent/prompt.yaml
@@ -102,16 +102,18 @@ template: |
 
   ## 0. Experiment Provenance Header (REQUIRED FIRST)
   Start every report with available experiment metadata:
-  
+
   ```
   # [Framework Name] Analysis Report
-  
-  **Experiment**: [experiment_name]  
-  **Run ID**: [run_id]  
-  **Date**: [completion_date]  
-  **Framework**: [framework_filename]  
-  **Corpus**: [corpus_filename] ([document_count] documents)  
-  
+
+  **Experiment**: [experiment_name]
+  **Run ID**: [run_id]
+  **Date**: [completion_date]
+  **Framework**: [framework_filename]
+  **Corpus**: [corpus_filename] ([document_count] documents)
+  **Analysis Model**: [analysis_model_used]
+  **Synthesis Model**: [synthesis_model_used]
+
   ---
   ```
   
