Add total experiment cost display to terminal and final report
Implement comprehensive cost transparency by displaying total experiment costs in both:
1. Terminal completion messages
2. Final report headers

Changes:
- CLI: Add cost display to all completion messages (run, resume commands)
- Synthesis Agent: Include cost information in experiment metadata
- Prompt Template: Add Total Cost field to report header format
- Orchestrator: Pass session costs to synthesis agent via assets

Features:
- Terminal: '💰 Total experiment cost: .XXXX USD'
- Report Header: '**Total Cost**: .XXXX USD'
- Handles missing cost data gracefully
- Works for all pipeline modes (full, analysis-only, statistical-prep, etc.)

Benefits:
- Complete cost transparency for researchers
- Budget tracking and optimization insights
- Academic accountability and reproducibility
- Enables cost-benefit analysis of model choices

Example Output:
Terminal: '💰 Total experiment cost: /bin/zsh.1358 USD'
Report: '**Total Cost**: /bin/zsh.0163 USD'

Note: Slight cost discrepancy between terminal and report indicates costs
are captured at different pipeline stages - terminal shows final total,
report shows costs up to synthesis point.

--- a/discernus/agents/unified_synthesis_agent/prompt.yaml
+++ b/discernus/agents/unified_synthesis_agent/prompt.yaml
@@ -114,11 +114,12 @@ template: |
   **Corpus**: [corpus_filename] ([document_count] documents)
   **Analysis Model**: [analysis_model_used]
   **Synthesis Model**: [synthesis_model_used]
+  **Total Cost**: [total_cost_if_available]
 
   ---
   ```
   
-  Use only metadata that is actually available in the experiment_metadata. This header enables traceability of results.
+  Use only metadata that is actually available in the experiment_metadata. This header enables traceability of results and cost transparency.
 
   ## 1. Executive Summary (2-3 paragraphs)
   - Key findings with statistical support
