CRITICAL FIX: Restore individual document analysis to prevent fatal regression
- RESTORE individual document processing instead of batch processing
- PREVENT concept blending in LLM by analyzing documents separately
- FIX scalability issue that would fail with hundreds of documents
- MAINTAIN analysis integrity by processing each document independently

CHANGES MADE:

1. Modified _prepare_documents() to process documents individually
2. Added _prepare_single_document() for individual document preparation
3. Updated analyze_documents() to loop through each document separately
4. Added _step1_enhanced_composite_analysis_single() for individual analysis
5. Added aggregation methods to combine results from all documents
6. Updated prompt template to reflect single document processing
7. Added per-document logging and tracking

TECHNICAL IMPACT:
- Each document gets its own LLM call (Flash scoring + Flash Lite utilities)
- No more concept blending between documents
- Scales to hundreds of documents without token limits
- Maintains analytical integrity by processing documents independently
- Preserves all existing artifact generation and provenance tracking

This restores the original intended behavior while maintaining all THIN principles.

--- a/discernus/agents/analysis_agent/prompt.yaml
+++ b/discernus/agents/analysis_agent/prompt.yaml
@@ -105,7 +105,7 @@ template: |
   **INPUT DATA:**
 
   - A single analytical framework - contains dimensional definitions and analysis guidance
-  - A batch of documents - texts to be analyzed
+  - A single document - text to be analyzed
 
   ---
 
@@ -119,8 +119,8 @@ template: |
 
   Begin analysis now for analysis `{analysis_id}`. Follow these steps in order:
 
-  STEP 1: Apply the framework to all {num_documents} documents using THREE INDEPENDENT ANALYTICAL APPROACHES
-  STEP 2: Calculate the MEDIAN score for each dimension across all three approaches  
+  STEP 1: Apply the framework to the single document using THREE INDEPENDENT ANALYTICAL APPROACHES
+  STEP 2: Calculate the MEDIAN score for each dimension across all three approaches
   STEP 3: Select the BEST evidence quote for each dimension from the three approaches
   STEP 4: Return ONLY the FINAL AGGREGATED RESULT in the exact format specified above
   STEP 5: Verify that your output includes the exact delimiters and follows the JSON schema precisely
