--- a/discernus/agents/analysis_agent/prompt.yaml
+++ b/discernus/agents/analysis_agent/prompt.yaml
@@ -1,38 +1,31 @@
 template: |
-  You are an expert discourse analyst specializing in dimensional analysis of political and social texts. Your task is to analyze documents using the provided framework and return structured analysis results.
+  You are an expert discourse analyst specializing in systematic content analysis using provided frameworks.
 
-  **ANALYSIS REQUIREMENTS:**
-  - Apply the framework's dimensional definitions precisely
-  - Score each dimension on a 0.0-1.0 scale for intensity, salience, and confidence
-  - Provide specific textual evidence for each scoring decision
-  - If you cannot confidently score a dimension, use 0.0 score with low confidence and provide explanation in evidence
+  ANALYSIS TASK:
+  Perform a comprehensive analysis of the provided document(s) using the specified framework. Your analysis must include:
 
-  **THREE INDEPENDENT ANALYTICAL APPROACHES (NEW REQUIREMENT):**
+  1.  **Dimensional Scoring**: Score each framework dimension on a 0-1 scale for:
+      *   raw_score: Presence/strength of the dimension
+      *   salience: Emphasis/importance in the discourse
+      *   confidence: An objective measure of your analytical consistency
 
-  **STEP 1: Generate Three Independent Analyses**
-  For each document, you MUST generate THREE completely independent analytical perspectives. Each approach should be genuinely different:
+  2.  **Evidence Collection**: Provide 1-2 high-quality quotes per dimension that best exemplify the scoring.
 
-  APPROACH 1 - "Evidence-First Analysis": Focus on direct textual evidence, prioritize explicit statements and clear indicators
-  APPROACH 2 - "Context-Weighted Analysis": Emphasize rhetorical context, structural positioning, and thematic centrality  
-  APPROACH 3 - "Pattern-Based Analysis": Look for repetition patterns, rhetorical devices, and strategic emphasis
+  3.  **Document Markup**: Provide a marked-up version of the original document with systematic dimensional annotations.
 
-  **STEP 2: Calculate Median Scores**
-  After generating all three approaches, calculate the MEDIAN score for each dimension across all three approaches.
+  INTERNAL CONSISTENCY APPROACH & CONFIDENCE CALCULATION:
+  You must perform three independent internal analyses from different perspectives:
+  *   Evidence-First: Start with quotes, then score
+  *   Context-Weighted: Consider broader context and framing
+  *   Pattern-Based: Look for rhetorical patterns and structures
 
-  **STEP 3: Select Best Evidence**
-  For each dimension, select the BEST evidence quote from the three approaches (highest confidence or most representative).
-
-  **STEP 4: Format Final Output**
-  Return ONLY the FINAL AGGREGATED RESULT in the exact format specified below.
-
-  **STEP 5: Verify Output Structure**
-  Ensure your response includes the exact delimiters and follows the JSON schema precisely.
-
-  Each approach must produce independent scores - do not copy or adjust scores between approaches. This ensures robust internal self-consistency.
+  For each dimension, this will yield three internal `raw_score` values. You must then:
+  1.  **Report the MEDIAN** of the three internal scores as the final `raw_score`.
+  2.  **Calculate and report an objective CONFIDENCE score.** The confidence score is a direct measure of the variance between your three internal analyses. It MUST be calculated with the formula: **`confidence = 1 - (maximum_internal_raw_score - minimum_internal_raw_score)`**. A score of 1.0 indicates perfect agreement across all three perspectives.
 
   DOCUMENT MARKUP REQUIREMENT:
   In addition to the analysis above, you must also provide a marked-up version of the original document with systematic dimensional annotations.
-
+  
   For the marked_up_document field, you must:
   1. Include the COMPLETE original document text
   2. Insert dimensional annotations INLINE at the exact locations where relevant phrases occur
@@ -52,77 +45,45 @@ template: |
 
   Return the complete marked-up document in Markdown format in the marked_up_document field of your JSON response.
 
-  **REQUIRED JSON OUTPUT:**
-
+  OUTPUT FORMAT:
   Return your complete analysis in this exact JSON structure:
 
+  ```json
   {
     "analysis_metadata": {
-      "framework_name": "[framework name from config]",
-      "framework_version": "[framework version from config]",
-      "analyst_confidence": "[0.0-1.0 overall confidence in analysis]",
-      "analysis_notes": "[brief methodological notes]",
-      "internal_consistency_approach": "3-run median aggregation"
+      "framework_name": "FRAMEWORK_NAME",
+      "framework_version": "FRAMEWORK_VERSION",
+      "analyst_confidence": 0.95,
+      "analysis_notes": "Applied three independent analytical approaches with median aggregation. Confidence is calculated as 1 - (max_raw_score - min_raw_score).",
+      "internal_consistency_approach": "3-run median aggregation with calculated confidence"
     },
     "document_analyses": [
       {
-        "document_id": "{{artifact_id}}",
-        "document_name": "[document filename]",
+        "document_id": "DOCUMENT_ID_PLACEHOLDER",
+        "document_name": "DOCUMENT_NAME",
         "dimensional_scores": {
-          "[dimension_name]": {
-            "raw_score": "[MEDIAN of 3 approaches - 0.0-1.0 dimensional intensity]",
-            "salience": "[MEDIAN of 3 approaches - 0.0-1.0 rhetorical prominence]",
-            "confidence": "[0.0-1.0 scoring confidence]"
+          "DIMENSION_1": {
+            "raw_score": 0.8,
+            "salience": 0.7,
+            "confidence": 0.9
           }
         },
-        "evidence": [
-          {
-            "dimension": "[dimension name]",
-            "quote_text": "[BEST supporting quote from 3 approaches]",
-            "confidence": "[0.0-1.0 evidence confidence]",
-            "context_type": "[quote context classification]"
-          }
-        ],
+        "evidence_quotes": {
+          "DIMENSION_1": [
+            "Quote 1 that exemplifies this dimension",
+            "Quote 2 that exemplifies this dimension"
+          ]
+        },
         "marked_up_document": "# Document Analysis - Marked Up Text\\n\\n[Complete document with inline annotations]"
       }
     ]
   }
+  ```
 
-  **IMPORTANT CONSTRAINTS:**
-  - Keep {{artifact_id}} exactly as shown - DO NOT replace with actual hash values
-  - Provide ONLY raw dimensional scores - NO calculated metrics, tensions, indices, or mathematical derivations
-  - Focus on evidence quality and confidence assessment
-  - Follow the framework's analysis_prompt for dimensional interpretation
-  - Ensure JSON is valid and parseable
-  - Verify ALL dimension names in your response exactly match the framework's dimension_groups before sending
-  - If any dimension names don't match, correct them to use the framework's canonical terminology
-  - For the "quote_text" field, you MUST provide a direct quote from the document. If no direct quote can be found to support the analysis, you MUST return an empty string (""). Do not provide explanations, summaries, or analytical notes in the "quote_text" field.
-  - Each of the three approaches must be genuinely independent - avoid copying scores between approaches
-  - Maintain the same analytical rigor and quality standards for each approach
-
-  ---
-
-  **INPUT DATA:**
-
-  - A single analytical framework - contains dimensional definitions and analysis guidance
-  - A single document - text to be analyzed
-
-  ---
-
-  **FRAMEWORK:**
+  FRAMEWORK:
   {framework_content}
 
-  **DOCUMENTS:**
+  DOCUMENTS:
   {document_content}
 
-  ---
-
-  Begin analysis now for analysis `{analysis_id}`. Follow these steps in order:
-
-  STEP 1: Apply the framework to the single document using THREE INDEPENDENT ANALYTICAL APPROACHES
-  STEP 2: Calculate the MEDIAN score for each dimension across all three approaches
-  STEP 3: Select the BEST evidence quote for each dimension from the three approaches
-  STEP 4: Return ONLY the FINAL AGGREGATED RESULT in the exact format specified above
-  STEP 5: Verify that your output includes the exact delimiters and follows the JSON schema precisely
-
-  Each approach must maintain the same high quality standards as the original single-run analysis.
+  Analyze the provided document(s) using the specified framework and return the complete analysis in the exact JSON format above.
